# golf

./: .env.example  .gitignore  README.md  agent.py  api_test.py  calculate_elo.py  convert_model.py  deep_cfr_agent.py  demo.py  golf_game.py  golf_game_env_v2.py  golf_game_v2.py  golf_gym_env.py  golf_gym_example.py  golf_pettingzoo_env.py  golf_pettingzoo_example.py  hyperparameter_sweep.py  llm_agent.py  marl_test.py  multi_agent_play.py  play.py  play_against_ai.py  ppo_agent.py  profile_training.py  pyproject.toml  reflex_agent.py  replay_buffer.py  requirements.txt  run_training.py  sb3_ppo.py  segment_tree.py  sweep_config.json  test_golf_game_v2.py  test_reflex_agent.py  test_replay_buffer.py  test_rllib.py  train.py  train_cfr.py  train_ppo.py  train_ppo_lstm.py  (+2 more)
logs/: README.md
models/: best_model.pth  checkpoint_1000.pth  checkpoint_10000.pth  checkpoint_1500.pth  checkpoint_2000.pth  checkpoint_2500.pth  checkpoint_3000.pth  checkpoint_3500.pth  checkpoint_4000.pth  checkpoint_4500.pth  checkpoint_500.pth  checkpoint_5000.pth  checkpoint_5500.pth  checkpoint_6000.pth  checkpoint_6500.pth  checkpoint_7000.pth  checkpoint_7500.pth  checkpoint_8000.pth  checkpoint_8500.pth  checkpoint_9000.pth  checkpoint_9500.pth  final_model.pth
